--- a/app/src/main/res/layout/trending_movie_item.xml
+++ b/app/src/main/res/layout/trending_movie_item.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="item"
-            type="com.gmail.eamosse.idbdata.data.Movie" />
+            type="com.gmail.eamosse.idbdata.data.TrendingMovie" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -15,7 +15,7 @@
         android:layout_marginStart="2dp">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/trending_img"
+            android:id="@+id/trending_movie_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_launcher_background"
@@ -25,17 +25,17 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/trending_title"
+            android:id="@+id/trending_movie_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:text="@{item.title}"
-            app:layout_constraintBottom_toBottomOf="@id/trending_img"
-            app:layout_constraintEnd_toEndOf="@id/trending_img"
-            app:layout_constraintStart_toStartOf="@id/trending_img"
-            app:layout_constraintTop_toTopOf="@id/trending_img"
+            app:layout_constraintBottom_toBottomOf="@id/trending_movie_img"
+            app:layout_constraintEnd_toEndOf="@id/trending_movie_img"
+            app:layout_constraintStart_toStartOf="@id/trending_movie_img"
+            app:layout_constraintTop_toTopOf="@id/trending_movie_img"
             tools:text="Actions et Aventures" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
