--- a/app/src/main/res/layout/trending_person_item.xml
+++ b/app/src/main/res/layout/trending_person_item.xml
@@ -6,8 +6,8 @@
             name="item"
             type="com.gmail.eamosse.idbdata.data.TrendingPerson" />
     </data>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="150dp"
         android:padding="5dp"
     android:layout_height="wrap_content">
 
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
+            app:bindImage="@{item.profile_path}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,9 +31,9 @@
             android:text="@{item.name}"
             app:layout_constraintEnd_toEndOf="@id/trending_person_img"
             app:layout_constraintStart_toStartOf="@id/trending_person_img"
-            app:layout_constraintTop_toTopOf="@id/trending_person_img"
+            app:layout_constraintTop_toBottomOf="@id/trending_person_img"
             android:layout_gravity="center"
             tools:text="Person" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
