--- a/app/src/main/res/layout/trending_person_item.xml
+++ b/app/src/main/res/layout/trending_person_item.xml
@@ -18,6 +18,7 @@
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintEnd_toEndOf="parent"
             app:bindImage="@{item.profile_path}"
+            app:radius="@{300}"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
