--- a/app/src/main/res/layout/trending_movie_item.xml
+++ b/app/src/main/res/layout/trending_movie_item.xml
@@ -10,32 +10,28 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="2dp"
-        android:layout_marginStart="2dp">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/trending_movie_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="200dp"
             android:src="@drawable/ic_launcher_background"
+            app:bindImage="@{item.poster_path}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/trending_movie_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textColor="@android:color/white"
+            android:textColor="@android:color/black"
             android:textSize="20sp"
             android:text="@{item.title}"
-            app:layout_constraintBottom_toBottomOf="@id/trending_movie_img"
             app:layout_constraintEnd_toEndOf="@id/trending_movie_img"
             app:layout_constraintStart_toStartOf="@id/trending_movie_img"
-            app:layout_constraintTop_toTopOf="@id/trending_movie_img"
+            app:layout_constraintTop_toBottomOf="@id/trending_movie_img"
             tools:text="Actions et Aventures" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
