--- a/app/src/main/res/layout/trending_fragment.xml
+++ b/app/src/main/res/layout/trending_fragment.xml
@@ -1,37 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.trending.TrendingFragment">
+        android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:context=".ui.trending.TrendingFragment">
 
-       <include layout="@layout/trending_row"
-           android:id="@+id/trending_movies"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toTopOf="parent"
-           app:title="@string/last_person"/>
+            <include layout="@layout/trending_row"
+                android:id="@+id/trending_movies"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:title="@string/last_person"/>
 
-       <include layout="@layout/trending_row"
-           android:id="@+id/trending_people"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/trending_movies"
-           app:title="@string/trending_peole"/>
+            <include layout="@layout/trending_row"
+                android:id="@+id/trending_people"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/trending_movies"
+                app:title="@string/trending_peole"/>
 
-       <include  layout="@layout/trending_row"
-           android:id="@+id/trending_categories"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           app:layout_constraintEnd_toEndOf="parent"
-           app:layout_constraintStart_toStartOf="parent"
-           app:layout_constraintTop_toBottomOf="@id/trending_people"
-           app:title="@string/trending_categories"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <include layout="@layout/trending_row"
+                android:id="@+id/trending_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/trending_people"
+                app:title="Trending TV"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 </layout>
