--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,7 +17,6 @@
 
         <action
             android:id="@+id/action_HomeFragment_to_MovieListFragment"
-
             app:destination="@id/navigation_movie_list" />
     </fragment>
     <fragment
@@ -39,11 +38,24 @@
         android:name="com.gmail.eamosse.imdb.ui.movie.MovieListFragment"
         android:label="@string/movie_list"
         tools:layout="@layout/fragment_movie_list" >
+
+        <action
+            android:id="@+id/action_listMovie_to_detailMovie"
+            app:destination="@id/fragment_movie_detail" />
         <argument
             android:name="genreId"
             app:argType="integer" />
     </fragment>
 
+    <fragment
+        android:id="@+id/fragment_movie_detail"
+        android:name="com.gmail.eamosse.imdb.ui.detailMovie.MovieDetailFragment"
+        android:label="Detail Movie"
+        tools:layout="@layout/fragment_movie_detail">
+        <argument
+            android:name="movieId"
+            app:argType="integer" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
